--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ content:
       - layout: top-middle
         title:  Integrated BS-MS Dual Degree in Biological Sciences
         caption: August 2015 - August 2020
-        sub_title: Indian Institute of Science Education and Research Thiruvananthapuram
+        sub_title: Indian Institute of Science Education and Research, Thiruvananthapuram, India
 
   - title: Experimental Skillset
     layout: text
